--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background: #000;
-    color: #fff;
+    background: #fffefe;
+    color: #000000;
   }
   
   header {
-    background: #111;
+    background: #fffefe;
     padding: 20px;
     text-align: center;
     border-bottom: 2px solid red;
+    position: relative;
   }
   
   .logo-container {
@@ -17,6 +18,11 @@ body {
     align-items: center;
     justify-content: center;
     gap: 15px;
+  }
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   
   header h1 {
@@ -26,12 +32,23 @@ body {
   }
   
   .logo {
-    width: 80px;
-    height: auto;
+    height: 80px;
+    vertical-align: middle;
+  }
+  .logo-header {
+    text-align: center;
+  }
+
+  .logo-header h1 {
+    display: inline-block;
+    margin-left: 10px;
+    vertical-align: middle;
+    font-size: 30px;
+    color: #333;
   }
   
   nav.menu-secciones {
-    background-color: #111;
+    background-color: #fffefe;
     margin: 20px auto;
     padding: 15px;
     max-width: 600px;
@@ -43,7 +60,7 @@ body {
   }
   
   nav.menu-secciones a {
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 10px 15px;
     text-decoration: none;
     font-weight: bold;
@@ -119,8 +136,25 @@ body {
   }
   
   footer {
-    background: #111;
+    background: #fffefe;
     text-align: center;
     padding: 15px;
     border-top: 1px solid red;
+  }
+  .redes-sociales {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    gap: 15px;
+  }
+  
+  .redes-sociales a {
+    color: black;
+    font-size: 1.5rem;
+    transition: color 0.3s ease;
+  }
+  
+  .redes-sociales a:hover {
+    color: red;
   }
