--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   }
   .logo-header {
     text-align: center;
-    
+
   }
 
   .logo-header h1 {
@@ -90,8 +90,8 @@ body {
   }
   
   .swiper-pequeno {
-    max-width: 600px;
-    height: 800px;
+    max-width: 1500px;
+    height: 500px;
     margin: auto;
   }
   
@@ -159,3 +159,26 @@ body {
   .redes-sociales a:hover {
     color: red;
   }
+
+
+  
+  
+  .carousel-slide {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .carousel-slide img {
+    width: 100%;
+    height: 600px; /* Podés ajustarlo según tu gusto */
+    object-fit: cover; /* cubre bien sin deformar */
+    border-radius: 15px;
+  }
+  
+  
+  @media (max-width: 768px) {
+    .carousel-slide img {
+      height: auto; /* o 'auto' si querés que mantenga proporción */
+    }
+  }
+  
