--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     background: #fffefe;
     padding: 20px;
     text-align: center;
-    border-bottom: 2px solid red;
+    border-bottom: 2px solid rgb(0, 0, 0);
     position: relative;
   }
   
@@ -26,7 +26,7 @@ body {
   }
   
   header h1 {
-    color: red;
+    color: rgb(0, 0, 0);
     margin: 0;
     font-size: 2rem;
   }
@@ -53,7 +53,7 @@ body {
     margin: 20px auto;
     padding: 15px;
     max-width: 600px;
-    border: 2px solid red;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
     display: flex;
     justify-content: space-around;
@@ -70,7 +70,7 @@ body {
   }
   
   nav.menu-secciones a:hover {
-    background-color: red;
+    background-color: rgb(0, 0, 0);
     color: #fff;
   }
   
@@ -86,7 +86,7 @@ body {
   }
   
   h2 {
-    color: red;
+    color: rgb(0, 0, 0);
   }
   
   .swiper-pequeno {
